# zkas-pool

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  firecash-bridge.yaml  firecash-merged.yaml  help.txt  pool-redactor.py  zkas-bridge.yaml
accountant/src/: config.rs  lib.rs  maturity.rs  payout.rs  shielded_scan.rs  vesting.rs
api/src/: claim.rs  lib.rs
api/src/handlers/: pool.rs
bridge/src/: app_config.rs  cli.rs  client_handler.rs  default_client.rs  kaspaapi.rs  lib.rs  merged.rs  prom.rs  share_handler.rs  stratum_server.rs
bridge/static/: index.html  raw.html
bridge/static/css/: site.css
bridge/tests/: merged_derisk.rs
crates/katpool-db/migrations/: 20260526000000_bootstrap.sql  20260716000000_payout_kind_zkas.sql
crates/katpool-db/src/repo/: payout.rs  pool_meta.rs
crates/katpool-domain/src/: address.rs
docs/: SWAP-C-PLAN.md
katpool/: Cargo.toml
katpool-dashboard-new/src/app/: page.tsx
katpool-dashboard-new/src/components/: providers.tsx
katpool-dashboard-new/src/lib/api/: hooks.ts  types.ts
katpool/src/: main.rs
landing/: index.html
ops/: bridge-watchdog.sh  zkas-bridge-watchdog.sh
payout-zkas/: Cargo.toml
payout-zkas/src/: chain.rs  confirm.rs  engine.rs  lib.rs  plan.rs  sender.rs  window.rs
